# fabric-logging

./: README.md  pyproject.toml
.github/workflows/: create-patch-release.yml  draft-patch-release.yml  publish-python-package.yml  test-build-publish-github-release.yml
src/fabric_logging/: __init__.py  logger.py
